syntax = "proto3";

package arrus.proto;

import "arrus/core/protobuf/settings/Us4OEMSettings.proto";
import "arrus/core/protobuf/settings/Us4RSettings.proto";

message SessionSettings {
  Us4RSettings us4r = 1;
  string dictionary_file = 2;
}

